@@ -2,7 +2,7 @@
 // $Id$
 
 /**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.9
+ * Code generated by the The ACE ORB (TAO) IDL Compiler v1.8.2
  * TAO and the TAO IDL Compiler have been developed by:
  *       Center for Distributed Object Computing
  *       Washington University
@@ -24,13 +24,10 @@
  * Information about TAO is available at:
  *     http://www.cs.wustl.edu/~schmidt/TAO.html
  **/
+#ifndef CIAO__________TUTORIAL_CODE_GENERATEDEXEC_HELLO_RECEIVER_COMP_EXEC_WWUCAH_H_
+#define CIAO__________TUTORIAL_CODE_GENERATEDEXEC_HELLO_RECEIVER_COMP_EXEC_WWUCAH_H_
 
-// TAO_IDL - Generated from
-// C:\ACE\latest\ACE_wrappers\TAO\TAO_IDL\be\be_codegen.cpp:1265
-
-#ifndef CIAO_HELLO_RECEIVER_COMP_EXEC_IMIOHK_H_
-#define CIAO_HELLO_RECEIVER_COMP_EXEC_IMIOHK_H_
-
+#include /**/ "ace/pre.h"
 
 #include "Hello_Receiver_compEC.h"
 
@@ -42,9 +39,6 @@
 
 namespace CIAO_Hello_Receiver_comp_Impl
 {
-
-  // TAO_IDL - Generated from
-  // c:\ace\latest\ace_wrappers\tao\tao_idl\be\be_visitor_component/facet_exh.cpp:53
   class  do_my_foo_exec_i
     : public virtual ::Hello::CCM_MyFoo_obj,
       public virtual ::CORBA::LocalObject
@@ -53,41 +47,41 @@ namespace CIAO_Hello_Receiver_comp_Impl
     do_my_foo_exec_i (
       ::Hello::CCM_Receiver_comp_Context_ptr ctx);
     virtual ~do_my_foo_exec_i (void);
-
+    
     // Operations and attributes from ::Hello::MyFoo_obj
-
+    
     virtual
     ::CORBA::Long foo (
       const char * in_str,
       ::CORBA::String_out answer);
-
+    
     virtual
     void hello (
       ::CORBA::Long_out answer);
-
+    
     // TAO_IDL - Generated from
-    // c:\ace\latest\ace_wrappers\tao\tao_idl\be\be_visitor_operation/operation_ch.cpp:36
-
+    // be/be_visitor_operation/operation_ch.cpp:36
+    
     virtual ::CORBA::Short
     rw_attrib (void);
-
+    
     // TAO_IDL - Generated from
-    // c:\ace\latest\ace_wrappers\tao\tao_idl\be\be_visitor_operation/operation_ch.cpp:36
-
+    // be/be_visitor_operation/operation_ch.cpp:36
+    
     virtual void
     rw_attrib (
       ::CORBA::Short rw_attrib);
-
+    
     // TAO_IDL - Generated from
-    // c:\ace\latest\ace_wrappers\tao\tao_idl\be\be_visitor_operation/operation_ch.cpp:36
-
+    // be/be_visitor_operation/operation_ch.cpp:36
+    
     virtual ::CORBA::Short
     ro_attrib (void);
-
+  
   private:
     ::Hello::CCM_Receiver_comp_Context_var ciao_context_;
   };
-
+  
   class  Receiver_comp_exec_i
     : public virtual Receiver_comp_Exec,
       public virtual ::CORBA::LocalObject
@@ -95,39 +89,41 @@ namespace CIAO_Hello_Receiver_comp_Impl
   public:
     Receiver_comp_exec_i (void);
     virtual ~Receiver_comp_exec_i (void);
-
+    
     //@{
     /** Supported operations and attributes. */
-
+    
     //@}
-
+    
     //@{
     /** Component attributes and port operations. */
-
-
+    
+    
     virtual ::Hello::CCM_MyFoo_obj_ptr
     get_do_my_foo (void);
     //@}
-
+    
     //@{
     /** Operations from Components::SessionComponent. */
-
+    
     virtual void set_session_context (::Components::SessionContext_ptr ctx);
-
+    
     virtual void configuration_complete (void);
-
+    
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
     //@}
-
+  
   private:
     ::Hello::CCM_Receiver_comp_Context_var ciao_context_;
     ::Hello::CCM_MyFoo_obj_var ciao_do_my_foo_;
   };
-
+  
   extern "C"  ::Components::EnterpriseComponent_ptr
   create_Hello_Receiver_comp_Impl (void);
 }
+
+#include /**/ "ace/post.h"
 
 #endif /* ifndef */
