@@ -2,7 +2,7 @@
 // $Id$
 
 /**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.9
+ * Code generated by the The ACE ORB (TAO) IDL Compiler v1.8.2
  * TAO and the TAO IDL Compiler have been developed by:
  *       Center for Distributed Object Computing
  *       Washington University
@@ -24,13 +24,10 @@
  * Information about TAO is available at:
  *     http://www.cs.wustl.edu/~schmidt/TAO.html
  **/
+#ifndef CIAO__________TUTORIAL_CODE_GENERATEDEXEC_HELLO_SENDER_COMP_EXEC_EIGDGL_H_
+#define CIAO__________TUTORIAL_CODE_GENERATEDEXEC_HELLO_SENDER_COMP_EXEC_EIGDGL_H_
 
-// TAO_IDL - Generated from
-// C:\ACE\latest\ACE_wrappers\TAO\TAO_IDL\be\be_codegen.cpp:1265
-
-#ifndef CIAO_HELLO_SENDER_COMP_EXEC_Y9ZN36_H_
-#define CIAO_HELLO_SENDER_COMP_EXEC_Y9ZN36_H_
-
+#include /**/ "ace/pre.h"
 
 #include "Hello_Sender_compEC.h"
 
@@ -42,7 +39,7 @@
 
 namespace CIAO_Hello_Sender_comp_Impl
 {
-
+  
   class  Sender_comp_exec_i
     : public virtual Sender_comp_Exec,
       public virtual ::CORBA::LocalObject
@@ -50,35 +47,37 @@ namespace CIAO_Hello_Sender_comp_Impl
   public:
     Sender_comp_exec_i (void);
     virtual ~Sender_comp_exec_i (void);
-
+    
     //@{
     /** Supported operations and attributes. */
-
+    
     //@}
-
+    
     //@{
     /** Component attributes and port operations. */
-
+    
     //@}
-
+    
     //@{
     /** Operations from Components::SessionComponent. */
-
+    
     virtual void set_session_context (::Components::SessionContext_ptr ctx);
-
+    
     virtual void configuration_complete (void);
-
+    
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
     //@}
-
+  
   private:
     ::Hello::CCM_Sender_comp_Context_var ciao_context_;
   };
-
+  
   extern "C"  ::Components::EnterpriseComponent_ptr
   create_Hello_Sender_comp_Impl (void);
 }
+
+#include /**/ "ace/post.h"
 
 #endif /* ifndef */
